<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sriram.weatherapp.MainActivity">

    <EditText
        android:id="@+id/city"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/city_hint"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/state"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/state_hint"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/favoriteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_label"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/noFavoriteMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_favorite_msg"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="20dp"/>

    <ListView
        android:layout_marginTop="15dp"
        android:id="@+id/favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingLeft="10dp"
        android:background="@drawable/border_ui">

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <

            </LinearLayout>
        </LinearLayout>-->

    </ListView>
</LinearLayout>
