<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sriram.weatherapp.CityWeatherDetailActivity">

    <LinearLayout
        android:id="@+id/locationView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currentLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location_label"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/cloudImage"
        android:layout_width="160dp"
        android:layout_height="130dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="35dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cloudDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:textSize="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maxTempLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/max_temp_label"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="fill_parent"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minTempLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/min_temp_Label"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"

            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feelsLikeLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="1"
                android:text="@string/feels_like"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/feelsLike"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dewpointLabel"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dewpoint"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/dewpoint"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pressureLabel"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cloudsLabel"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clouds"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/clouds"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/windsLabel"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/winds"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/winds"
                android:layout_width="fill_parent"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
